--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/uces_videos
     username: root
-    password: csantander93
+    password: root
   jpa:
     open-in-view: false
     show-sql: true
